# learning

./: README.md
bash/: default_command_line_arguments.sh  if_statment.sh  stop_and_wait_for_input.sh
basic/: inheritance.py  test_modulo.py
blender/: ex_00.py
boost/: CMakeLists.txt  main.cpp
cmake/: CMakeLists.txt  main.cpp
cmake/copy_files/: CMakeLists.txt  main.cpp  stocazzo
cmake/include_cmake_vars_in_cpp/: CMakeLists.txt  main.cpp
co-occurence-matrix/dealii/: CMakeLists.txt  evaluate_glcm.cc
co-occurence-matrix/python/: camera_grass_sky_example.py  example_00.py  example_01.py  example_02.py  glcm.py  loop_over_camera_example.py  read_write_image.py  test_glcm.py
cpp/: create-mechanism.cpp  create_dir.cpp  dimension_independent_hyper_cube.cc  exist_dir.cpp  inheritance.cpp  knot_vect_deg_ele.cpp  last_entries.cpp  map_of_funcs.cpp  map_of_funcs_00.cpp  map_of_funcs_01.cpp  maps.cpp  memoy_allocation.cpp  modulus.cpp  pointers-gym.cpp  pthread-duplication.cpp  pthread-lambda.cpp  pthread-mutex.cpp  read_raw_binary_data.py  ref_and_bind.cpp  std-map.cpp  std_function.cpp  template_memory.cpp  unique.cpp  vector_preallocation.cpp  write_vetor_to_bynary.cpp
ctypes/ex_01/: CMakeLists.txt  cos_doubles.py
dash/ex00/: main.py
dash/ex01/: main.py
data-science/: gaussian_mixture_1d.py  gaussian_mixture_2d.py
dealii/: CMakeLists.txt  inheritance_00.cc  symmetrize.cc  symmetrize_01.cc
dealii/matrix_manipulation/: symmetrize_00.cc  symmetrize_02.cc
dii-apps/sort-dofs-lexicoghaphycally/: step-1.cc
eigen/construc_newton/: CMakeLists.txt  main.cpp
eigen/ex00/: CMakeLists.txt
isogeometric/: main.c
isogeometric/degree_elevation_c/: compile.sh  main.c
javascipt/: fetch_json.html  quarter-anulus-2d.json
javascipt/drag_drop/: droppy.js  index.html
javascipt/drag_drop_draw/: draw_b_spline.js  droppy.js  index.html
javascipt/drag_drop_draw/dummy_succeed/sub/: foo.json
javascipt/threejs/: index.html
legendre_cpp/: CMakeLists.txt  main.cpp
mixture_models_gaussian/cpp/: CMakeLists.txt  mixed_gaussian.cpp
mixture_models_gaussian/cpp-style/: CMakeLists.txt  mixed_gaussian.cpp
mixture_models_gaussian/find_minimum/: CMakeLists.txt  main.cpp  prototyping.py
mixture_models_gaussian/python/: expectation_maximization.py  gaussian_distributions.py  gravity_clustering.py  kernel_density_estimation.py
nicola_open_cv/: CMakeLists.txt  main.cpp
open_cv/display_image/: CMakeLists.txt
open_cv/filters/: CMakeLists.txt  test_filters.cpp
open_cv/glcm_setup/: CMakeLists.txt  assert.h  glcm_setup.cpp  tools.h  vars.h.in
open_cv/glcm_setup/glcm/: CMakeLists.txt  analysis_tools.cpp  analysis_tools.h
open_cv/glcm_setup/la/: CMakeLists.txt  matrix_tools.cpp  matrix_tools.h
open_cv/min_area_rect/: CMakeLists.txt
open_cv/rotate_image/: CMakeLists.txt  rotate_image.cpp
pcl/plane_eval/: planar_segmentation.cpp
pcl/point_xtract/: extract_indices.cpp
pcl/visualizer_test/: CMakeLists.txt
poly_roots/: maculay_matrix.ipynb
python/: numpy_submatrix.py
tensor-decomposition/: ex00.py
